--- a/lib/lambda/createQldbTables/package.json
+++ b/lib/lambda/createQldbTables/package.json
@@ -22,8 +22,9 @@
         "ion-to-json": "^2.0.0",
         "jsbi": "^3.1.2",
         "typescript": "^3.9.5",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^4.9.1"
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.9.1",
+        "glob-parent": "^5.1.2"
     },
     "devDependencies": {
         "https-proxy-agent": "^5.0.0",
